src/main/java/syntactic/test/passing/accesoArray.ru
start {
    test[1] = new A();
}