src/main/java/syntactic/test/failing/statementWithputParenthesis.ru
start {
    IO.out_int(0);
}